# ml-from-scratch-lab

./: .gitignore  .pre-commit-config.yaml  03_pruning_and_complexity.ipynb  03_pruning_and_complexity_executed.ipynb  04_random_forest.ipynb  ANALYSIS.md  CLEANUP_REPORT.md  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: notebook_check.yml  test.yml
benchmarks/: compare_linear_regression.py  compare_logistic_regression.py  compare_sklearn.ipynb
configs/: model_configs.yaml  synthetic_datasets.yaml  training_config.yaml
docs/: api_reference.md  contributing.md  design_principles.md  linear_models.md  math_foundations.md
examples/: kmeans_image_compression.py  linear_regression_example.py  linear_regression_iris.py  logistic_regression_digits.py  logistic_regression_example.py  neural_network_example.py
experiments/: README.md
math_to_code/00_math_foundations/: 02_linear_algebra_geometry.ipynb  03_eigenvalues_svd.ipynb  05_probability_distributions.ipynb  10_sampling_lln_clt.ipynb
math_to_code/01_linear_models/: 03_logistic_regression.ipynb  04_multiclass_logreg.ipynb  05_evaluation_metrics.ipynb
math_to_code/02_tree_models/: 01_decision_tree.ipynb  04_random_forest.ipynb  05_gradient_boosting_toy.ipynb
math_to_code/03_unsupervised/: 01_kmeans_from_scratch.ipynb  03_gaussian_mixture_em.ipynb  04_hierarchical_clustering.ipynb
math_to_code/04_neural_networks/: 01_perceptron_and_adaline.ipynb  02_mlp_backprop.ipynb  03_activation_analysis.ipynb
math_to_code/05_advanced/: 01_svm_primal_dual.ipynb  02_hidden_markov_models.ipynb
math_to_code/experiments/: exp_01_bias_variance_tradeoff.ipynb
scripts/: README.md  cleanup_scripts.py  notebook_generator.py  verify_notebooks.py
src/engine/: utils.py
tests/: test_decision_tree.py  test_kmeans.py  test_linear_regression.py  test_logistic_regression.py  test_mlp.py
(+88 files in other folders)
